2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02642]
	* linein.c (next_dcompl): fix ifdef EMACS_LIKE_LINEEDIT

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02640]
	* linein.c (escape_spaces): rewrite
	* linein.c (unescape_spaces): rewrite

2001-12-07  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02638] completion for ! and/or @
	* linein.c (next_compl): check "\\ ", "\\\t"
	* linein.c (escape_spaces): added
	* linein.c (unescape_spaces): added
	* linein.c (doComplete): use unescape_spaces, escape_spaces

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02637]
	* url.c (openSocket): hostname volatile -> const
	* url.c (openSocket): add hname
	* url.c (openSocket): copy hostname to hname to be modified safely
	* url.c (otherinfo): revert previous change

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02635] dirlist
	* file.c (loadGeneralFile): use pu.file instead of pu.real_file
	* scripts/dirlist.cgi.in: modified for perl4

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [#489463] Host: header is wrong IPv6 literal addr
	* url.c (otherinfo): IPv6 address should be quoted with bracket

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02629]
	* linein.c (next_compl): completion for name including space

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02633]
	* url.c (parseURL2): filename should be quoted here, because
	                   it will be unquote() soon

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rename install.sh to install-sh
	* XMakefile: s/install.sh/install-sh/

2001-12-07  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02622]
	* tagtable.tab (noframes): added
	* tagtable.tab (/noframes): added
	* fm.h (RB_NOFRAMES): added
	* html.h (HTML_NOFRAMES): added
	* html.h (HTML_N_NOFRAMES): added 
	* html.c (ALST_NOFRAMES): added
	* html.c (98 HTML_NOFRAMES): added
	* html.c (99 HTML_N_NOFRAMES): added