@@ -1,0 +1,6 @@
+/* $Id: version.c.in,v 1.1 2001/12/07 19:50:38 ukai Exp $ */
+#define CURRENT_VERSION "w3m/0.2.2+cvs"
+
+#ifndef FM_H
+char *w3m_version = CURRENT_VERSION;
+#endif				/* not FM_H */
